--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
             <label class="terms-checkbox" for="terms">
               
               <input class="checkbox-form" type="checkbox" 
-              name="" value="terms" id="terms"/>
+              name="checkbox" value="terms" id="terms"/>
               <span class="icon-checkbox"></span>
               Соглашаюсь с рассылкой и принимаю <a class="contract"> 
                 Условия договора</a>           
             </label>
           </div>
           
-          <button class="button-primary " type="button">Отправить</button>
+          <button class="button-primary " type="submit">Отправить</button>
 
           </form>
 
