--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <div class="form-modal">
             <label for="name" class="label-modal">Имя</label>
-            <input type="name" class="input-form" name="name" id="name" />
+            <input type="text" class="input-form" name="name" id="name" />
             <svg class="modal-svg" width="18px" height="18px">
               <use href="./images/icons.svg#modal-person"></use>
             </svg>
