--- a/portfolio.html
+++ b/portfolio.html
@@ -194,8 +194,27 @@
           </li>        
         </ul>
       </div>
-      
-    </div>
+
+<!--Формы-->
+
+<div class="form-footer">
+<h3 class="third-title">Подпишитесь на рассылку</h3>
+<form class="form-footer-form">
+
+  <label for="email-label"></label>
+  <input type="email" name="email" id="email-label" placeholder="E-mail"/>
+  <button class="button-primary-footer" type="submit" >Подписаться<svg class="submit-footer" width="24px" height="24px">
+    <use href="./images/icons.svg#icon-icon-send-1"></use>
+        </svg></button>
+    </form>
+
+    
+
+</div>
+
+
+</div>
+ 
   </footer>
   </body>
 </html>
